# money-machine

./: .gitignore  README.md  money-machine.cabal  stack.yaml
app/: Backtest.hs  Backtest2.hs  Main.hs
src/MoneyMachine/: Backtest.hs  Backtest2.hs  Candle.hs  Chart.hs  Cluster.hs  ClusterStrategy.hs  Correlation.hs  Debug.hs  Env.hs  HistData.hs  MarketHistory.hs  MockTradeInterpreter.hs  NoopStrategy.hs  Order.hs  Practice.hs  Strategy.hs  TechnicalAnalysis.hs  Trade.hs  TradingDSL.hs  Train.hs
test/MoneyMachine/: MockTradeInterpreterSpec.hs
