name:                money-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/money-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
--  extra-lib-dirs:      C:\ta-lib\c\lib
  exposed-modules:     MoneyMachine.NoopStrategy, MoneyMachine.HistData, MoneyMachine.Env, MoneyMachine.Backtest, MoneyMachine.Candle, MoneyMachine.Chart, MoneyMachine.Cluster, MoneyMachine.ClusterStrategy, MoneyMachine.Order, MoneyMachine.Practice, MoneyMachine.Strategy, MoneyMachine.Trade, MoneyMachine.TechnicalAnalysis, MoneyMachine.MarketHistory, MoneyMachine.Debug
  build-depends:       base
                     , oanda-rest-api
                     , bytestring
                     , thyme
                     , text
                     , lens
                     , time
                     , kmeans
                     , unordered-containers
                     , directory
                     , containers
                     , Decimal
                     , talib
                     , transformers
                     , bytestring-lexing
                     , containers
                     , vector
                     , lifted-base
                     , monad-control
                     , async
  default-language:    Haskell2010

executable money-machine-practice
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -prof -auto-all -caf-all -fforce-recomp -O2 -threaded -rtsopts -with-rtsopts=-N -main-is Main
  build-depends:       base
                     , money-machine
                     , oanda-rest-api
                     , bytestring
                     , thyme
                     , text
                     , lens
                     , time
                     , kmeans
                     , unordered-containers
                     , directory
                     , containers
                     , Decimal
                     , talib
                     , transformers
                     , bytestring-lexing
                     , containers
                     , vector
  default-language:    Haskell2010

executable money-machine-backtest
  hs-source-dirs:      app
  main-is:             Backtest.hs
  ghc-options:         -prof -auto-all -caf-all -fforce-recomp -O2 -threaded -rtsopts -with-rtsopts=-N -main-is Backtest
  build-depends:       base
                     , money-machine
                     , oanda-rest-api
                     , bytestring
                     , thyme
                     , text
                     , lens
                     , time
                     , kmeans
                     , unordered-containers
                     , directory
                     , containers
                     , Decimal
                     , talib
                     , transformers
                     , bytestring-lexing
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite money-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , money-machine
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/money-machine
